methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:16: error: Unmatched closing brace '}' ignored here
}
^